--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "3.0.0",
   "description": "Javascript bindings for Myo",
   "main": "myo.js",
-  "dependencies": {},
+  "dependencies": {
+    "ws": "~0.4.25",
+    "player": "~0.6.1"
+    },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
